# hub-ZOgH

./: .gitignore  test.py  week3作业.py  第二周作业.py
vllm_deployment/outputs/: run_log.md
week05/: 第五周作业1.py
week1基本介绍_0412/week1 基本介绍/: AI行业基本介绍.pptx  machine-learning.html
week2深度学习基础_0419/week2 深度学习基本原理/: CrossEntropy.py  DNNforward.py  GradientDescent.py  Softmax.py  TorchDemo.py  深度学习原理.pptx
张宝旭/week04/: homework.py
张宝旭/week06/: homework.md
张宝旭/week07/: homework.md
张宝旭/week08/: REPORT.md
张宝旭/week09/: homework.py  throughput_results.json
张宝旭/week10/: README.md  package.bat  start.bat
张宝旭/week11/: run_weather_function_call.py  weather_backend.py
张宝旭/week12/: ARCHITECTURE.md  RESUME_GUIDE.md  USAGE_GUIDE.md  index.html  sessions.jsonl
张志强/week05/: best_model_trans.pt  language_mode_transfomer.py  load_transfomer.py
张志强/week06/: 作业.md
张志强/week09/: 基于第八周文本匹配项目由bert改为roberta对比.md
张志强/week10/: RAG学习演练记录日志.md
张志强/week11/: run_function_call.py  weather_backend.py  (+1 more)
李佑康/week11/function_call_mcp_cli/: pyproject.toml  requirements.txt
李佑康/week11/function_call_mcp_cli/mode_function_call/: run_function_call.py
李佑康/week11/function_call_mcp_cli/mode_mcp/: run_mcp.py
柴越洋/: week03
洪建宇/: week06
王其林/week11/: compare_result.md  pyproject.toml  run_cli.py  run_function_call.py  run_mcp.py  tool_backend.py  weather_cli.py  weather_server.py
王欣语/: week04
石兴哲/: .gitignore
胥靖阳/: READEME.md
董佳俊/week11/: pyproject.toml  requirements.txt
董佳俊/week11/mode_cli/: weather_agent.py
董佳俊/week11/mode_cli/cli/: main.py
董佳俊/week11/mode_function_call/: weather_agent.py
董佳俊/week11/mode_mcp/: weather_agent.py
(+1303 files in other folders)
