[project]
name = "weather-agent"
version = "0.1.0"
description = "天气查询 ReAct Agent — Function Call / MCP / CLI 三方式多轮循环对比"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
]

[project.scripts]
fincli = "mode_cli.cli.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "mode_cli", "mode_cli.cli"]
